--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,10 @@
 name: Build Redmi AX3000 Firmware
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
-  workflow_dispatch:
 
 jobs:
   build:
@@ -18,7 +18,7 @@ jobs:
           ref: main
           path: openwrt
 
-      - name: Install dependencies
+      - name: Install build dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential clang flex g++ gawk gcc-multilib gettext \
@@ -81,7 +81,7 @@ jobs:
           cd openwrt
           make -j$(nproc) || make -j1 V=s
 
-      - name: Find firmware file
+      - name: Find firmware
         id: find_firmware
         run: |
           FILE=$(find openwrt/bin/targets/ -type f -name '*squashfs-factory.ubi' | head -n 1)
