--- a/.config
+++ b/.config
@@ -1,65 +1,29 @@
-# Target device: Redmi AX3000
-CONFIG_TARGET_ipq50xx=y
-CONFIG_TARGET_ipq50xx_DEVICE_redmi_ax3000=y
+CONFIG_TARGET_ipq60xx=y
+CONFIG_TARGET_ipq60xx_DEVICE_redmi_ax3000=y
+CONFIG_TARGET_ROOTFS_SQUASHFS=y
+CONFIG_TARGET_UBI_IMAGES=y
+CONFIG_TARGET_IMAGES_GZIP=y
 
-# LuCI interface
+CONFIG_TARGET_KERNEL_PARTSIZE=64
+CONFIG_TARGET_ROOTFS_PARTSIZE=256
+
+# LuCI
 CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-ssl=y
 CONFIG_LUCI_LANG_zh_Hans=y
 
-# PassWall and dependencies
-CONFIG_PACKAGE_luci-app-passwall=y
-CONFIG_PACKAGE_passwall=y
-CONFIG_PACKAGE_ipset=y
-CONFIG_PACKAGE_ip-full=y
-CONFIG_PACKAGE_iptables-mod-tproxy=y
-CONFIG_PACKAGE_kmod-ipt-nat6=y
+# 网络工具
+CONFIG_PACKAGE_curl=y
+CONFIG_PACKAGE_wget=y
+CONFIG_PACKAGE_iperf3=y
 
-# Protocol support
+# Passwall
+CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_xray-core=y
 CONFIG_PACKAGE_trojan-plus=y
 CONFIG_PACKAGE_hysteria=y
 
-# DNS support
+# DNS
 CONFIG_PACKAGE_dnsmasq-full=y
 CONFIG_PACKAGE_luci-app-smartdns=y
-
-# Common network tools
-CONFIG_PACKAGE_curl=y
-CONFIG_PACKAGE_wget=y
-CONFIG_PACKAGE_iperf3=y
-CONFIG_PACKAGE_tcpdump=y
-CONFIG_PACKAGE_nmap=y
-
-# Kernel and firmware optimization
-CONFIG_TARGET_KERNEL_COMPRESS_XZ=y
-CONFIG_TARGET_ROOTFS_SQUASHFS=y
-CONFIG_TARGET_UBI_IMAGES=y
-CONFIG_TARGET_IMAGES_GZIP=y
-CONFIG_TARGET_IMAGES_PAD=y
-CONFIG_TARGET_KERNEL_PARTSIZE=64
-CONFIG_TARGET_ROOTFS_PARTSIZE=256
-
-# Overlay filesystem support
-CONFIG_TARGET_ROOTFS_EXT4=y
-
-# Remove unnecessary packages to save space
-# (Keep bootstrap theme only)
-# CONFIG_PACKAGE_luci-theme-argon is not set
-
-# System enhancements
-CONFIG_PACKAGE_block-mount=y
-CONFIG_PACKAGE_kmod-fs-ext4=y
-CONFIG_PACKAGE_kmod-usb-core=y
-CONFIG_PACKAGE_kmod-usb-storage=y
-CONFIG_PACKAGE_kmod-fs-vfat=y
-CONFIG_PACKAGE_kmod-nls-cp437=y
-CONFIG_PACKAGE_kmod-nls-utf8=y
-CONFIG_PACKAGE_kmod-fs-exfat=y
-CONFIG_PACKAGE_kmod-fs-ntfs=y
-CONFIG_PACKAGE_parted=y
-
-# Optimize memory usage to prevent software installation failures
-CONFIG_BUSYBOX_CUSTOM=y
-CONFIG_BUSYBOX_DEFAULT_FEATURES=y
-CONFIG_BUSYBOX_CONFIG_FEATURE_WGET=y
+CONFIG_PACKAGE_smartdns=y
