--- a/.config
+++ b/.config
@@ -1,29 +1,32 @@
 CONFIG_TARGET_ipq60xx=y
+CONFIG_TARGET_ipq60xx_generic=y
 CONFIG_TARGET_ipq60xx_DEVICE_redmi_ax3000=y
-CONFIG_TARGET_ROOTFS_SQUASHFS=y
-CONFIG_TARGET_UBI_IMAGES=y
-CONFIG_TARGET_IMAGES_GZIP=y
 
-CONFIG_TARGET_KERNEL_PARTSIZE=64
-CONFIG_TARGET_ROOTFS_PARTSIZE=256
-
-# LuCI
+# 常用功能
 CONFIG_PACKAGE_luci=y
-CONFIG_PACKAGE_luci-ssl=y
-CONFIG_LUCI_LANG_zh_Hans=y
+CONFIG_PACKAGE_uci=y
+CONFIG_PACKAGE_opkg=y
+CONFIG_PACKAGE_dropbear=y
+CONFIG_PACKAGE_ppp=y
+CONFIG_PACKAGE_pppoe=y
 
-# 网络工具
+# 无线
+CONFIG_PACKAGE_kmod-ath11k=y
+CONFIG_PACKAGE_kmod-ath11k-ahb=y
+CONFIG_PACKAGE_kmod-ath11k-pci=y
+
+# USB
+CONFIG_PACKAGE_kmod-usb-core=y
+CONFIG_PACKAGE_kmod-usb2=y
+CONFIG_PACKAGE_kmod-usb3=y
+
+# 网络增强
+CONFIG_PACKAGE_kmod-tun=y
+CONFIG_PACKAGE_kmod-nft-offload=y
+CONFIG_PACKAGE_kmod-nft-nat=y
+
+# 系统工具
+CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_wget=y
-CONFIG_PACKAGE_iperf3=y
-
-# Passwall
-CONFIG_PACKAGE_luci-app-passwall=y
-CONFIG_PACKAGE_xray-core=y
-CONFIG_PACKAGE_trojan-plus=y
-CONFIG_PACKAGE_hysteria=y
-
-# DNS
-CONFIG_PACKAGE_dnsmasq-full=y
-CONFIG_PACKAGE_luci-app-smartdns=y
-CONFIG_PACKAGE_smartdns=y
+CONFIG_PACKAGE_nano=y
