--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,78 +1,68 @@
-name: Build OpenWrt for Redmi AX3000
+name: Build OpenWrt Redmi AX3000
 
 on:
-  push:
-  pull_request:
   workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-22.04
 
     steps:
-      - name: Checkout your repo (包含 .config)
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 1
+    - name: Checkout workflow repo
+      uses: actions/checkout@v4
+      with:
+        path: workflow
 
-      - name: Checkout OpenWrt 源码
-        uses: actions/checkout@v4
-        with:
-          repository: openwrt/openwrt
-          ref: master
-          path: openwrt
-          fetch-depth: 1
+    - name: Checkout OpenWrt
+      uses: actions/checkout@v4
+      with:
+        repository: openwrt/openwrt
+        ref: master
+        path: openwrt
 
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential libncurses5-dev gawk git gettext \
-            libssl-dev xsltproc rsync wget unzip python3 ccache
+    - name: Install dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y build-essential clang flex bison g++ gawk \
+          gcc-multilib g++-multilib gettext git libncurses5-dev libssl-dev \
+          python3-distutils rsync unzip zlib1g-dev file wget
 
-      - name: Cache downloads
-        uses: actions/cache@v3
-        with:
-          path: openwrt/dl
-          key: ${{ runner.os }}-openwrt-dl-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-openwrt-dl-
+    - name: Add Redmi AX3000 support
+      run: |
+        cd openwrt
+        git clone https://github.com/hzyitc/openwrt-redmi-ax3000 device_patch
+        # 打入设备相关支持文件
+        cp -r device_patch/target/linux/ipq60xx ./target/linux/
+        cp -r device_patch/package/* ./package/
 
-      - name: Cache ccache
-        uses: actions/cache@v3
-        with:
-          path: ~/.ccache
-          key: ${{ runner.os }}-openwrt-ccache-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-openwrt-ccache-
+    - name: Apply custom configuration
+      run: |
+        cp workflow/.config openwrt/.config
+        cd openwrt
+        make defconfig
 
-      - name: Apply custom configuration
-        run: |
-          cp .config openwrt/.config
-          cd openwrt
-          make defconfig
+    - name: Download sources
+      run: |
+        cd openwrt
+        make download -j$(nproc)
 
-      - name: Build OpenWrt
-        run: |
-          cd openwrt
-          echo "Using $(nproc) threads"
-          make -j$(nproc) || make -j1 V=s
+    - name: Build
+      run: |
+        cd openwrt
+        make -j$(nproc) V=s
 
-      - name: Find AX3000 factory.ubi
-        run: |
-          cd openwrt
-          FILE=$(find bin/targets/ -type f -name '*redmi-ax3000*squashfs-factory.ubi' | head -n 1)
-          if [ -z "$FILE" ]; then
-            echo "❌ No AX3000 squashfs-factory.ubi firmware found!"
-            echo "ℹ️ Available files:"
-            find bin/targets/ -type f
-            exit 1
-          fi
-          echo "✅ Found firmware: $FILE"
-          echo "file=$FILE" >> $GITHUB_OUTPUT
-        id: find
+    - name: Collect firmware
+      run: |
+        cd openwrt
+        mkdir -p ../firmware
+        find bin/targets/ -type f -name "*redmi-ax3000*squashfs-factory.ubi" -exec cp {} ../firmware/ \;
+        find bin/targets/ -type f -name "*redmi-ax3000*sysupgrade*" -exec cp {} ../firmware/ \;
 
-      - name: Upload AX3000 firmware
-        uses: actions/upload-artifact@v4
-        with:
-          name: ax3000-factory-ubi
-          path: ${{ steps.find.outputs.file }}
+    - name: Upload firmware
+      uses: actions/upload-artifact@v4
+      with:
+        name: openwrt-redmi-ax3000
+        path: firmware
