--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,11 @@ name: Build OpenWrt Redmi AX3000
 
 on:
   workflow_dispatch:
+    inputs:
+      hw_version:
+        description: 'AX3000 hardware version (V1 or V2)'
+        required: true
+        default: 'V1'
   push:
     branches:
       - main
@@ -34,9 +39,26 @@ jobs:
       run: |
         cd openwrt
         git clone https://github.com/hzyitc/openwrt-redmi-ax3000 device_patch
-        # 打入设备相关支持文件
-        cp -r device_patch/target/linux/ipq60xx ./target/linux/
-        cp -r device_patch/package/* ./package/
+
+        # 复制 package
+        if [ -d "device_patch/package" ]; then
+          cp -r device_patch/package/* ./package/
+          echo "✅ Packages copied."
+        else
+          echo "⚠️ No package folder found."
+        fi
+
+        # 根据硬件版本应用 patch
+        HW_VERSION="${{ github.event.inputs.hw_version }}"
+        PATCH_DIR="device_patch/patches/$HW_VERSION"
+        if [ -d "$PATCH_DIR" ]; then
+          for p in "$PATCH_DIR"/*.patch; do
+            git apply "$p" && echo "✅ Applied patch $p" || echo "❌ Failed patch $p"
+          done
+          echo "✅ All patches for $HW_VERSION applied."
+        else
+          echo "⚠️ No patch folder for $HW_VERSION found."
+        fi
 
     - name: Apply custom configuration
       run: |
@@ -49,10 +71,10 @@ jobs:
         cd openwrt
         make download -j$(nproc)
 
-    - name: Build
+    - name: Build OpenWrt
       run: |
         cd openwrt
-        make -j$(nproc) V=s
+        make -j$(nproc) V=s 2>&1 | tee ../build_log.txt
 
     - name: Collect firmware
       run: |
@@ -66,3 +88,9 @@ jobs:
       with:
         name: openwrt-redmi-ax3000
         path: firmware
+
+    - name: Upload build log
+      uses: actions/upload-artifact@v4
+      with:
+        name: build-log
+        path: build_log.txt
