--- a/.github/workflows/.config
+++ b/.github/workflows/.config
@@ -30,3 +30,8 @@ CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_wget=y
 CONFIG_PACKAGE_nano=y
+
+# 显式禁用有问题的包
+# (确保不会被 defconfig 自动重新选上)
+# gpio-button-hotplug 在当前内核中不兼容
+# CONFIG_PACKAGE_gpio-button-hotplug is not set
